feat: Enhance UTF-8 BOM handling in TreeSitterAnalyzer (needed for C#)